k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
  namespace: maskr
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/maskrapp/backend:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: grpc
              containerPort: 50051
            - name: health
              containerPort: 9000
          livenessProbe:
            tcpSocket:
              port: health
            initialDelaySeconds: 20
            timeoutSeconds: 8
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: health
            initialDelaySeconds: 5
            timeoutSeconds: 8
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
      imagePullSecrets:
        - name: gh-docker
